# kitty-registrar

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
scripts/: config.sh  test.sh
src/: build.rs  main.rs  tests.rs
