[package]
name = "kitty-registrar"
version = "0.1.0-dev"
authors = ["Nathan Glover <nathan@glovers.id.au>"]
description = "Kitty Registrar is a frontend for cat fostering written in Rust."
repository = "https://github.com/t04glovern/kitty-registrar"
readme = "README.md"
keywords = ["cats", "kittens", "web", "bootstrap", "templates"]
license = "MIT/Apache-2.0"
build = "src/build.rs"

[dependencies]
rocket = "0.3.5"
rocket_codegen = "0.3.5"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"

[dependencies.rocket_contrib]
version = "0.3.5"
default-features = false
features = ["handlebars_templates"]

[dev-dependencies]
compiletest_rs = ">= 0.3.1, <= 0.3.3"

[build-dependencies]
yansi = "0.3"
version_check = "0.1.3"

[patch.crates-io]
ring = { git = "https://github.com/SergioBenitez/ring", branch = "v0.12" }